--- a/package.json
+++ b/package.json
@@ -1,11 +1,24 @@
 {
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "joi": "^17.13.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.7",
-    "type":"module",
     "path": "^0.12.7"
-  }
+  },
+  "name": "back_js",
+  "version": "1.0.0",
+  "main": "ap.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
