--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.7",
+    "nodemailer": "^6.9.14",
     "path": "^0.12.7"
   },
   "name": "back_js",
